Fixed the scroll overflow bug

--- a/assets/main.css
+++ b/assets/main.css
@@ -28,7 +28,6 @@ html {
 body {
     color: var(--color-text);
     background-color: var(--color-background-primary);
-    overflow-x: hidden;
 }
 
 h2 {
